Fixed css on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -139,7 +139,7 @@ select {
     font-size: 25px;
   }
   .photo-input {
-    margin: 10px;
+    margin: 13px;
     width: 90% !important;
   }
   .photo-paragraph {
